--- a/app.json
+++ b/app.json
@@ -8,13 +8,27 @@
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "splash": {
+      "image": "./assets/images/splash-icon.png",
+      "backgroundColor": "#f5f5f5",
+      "resizeMode": "contain"
+    },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#f5f5f5"
+      },
+      "softwareKeyboardLayoutMode": "pan",
+      "navigationBarColor": "#f5f5f5",
+      "statusBar": {
+        "backgroundColor": "#f5f5f5",
+        "barStyle": "dark-content"
       }
     },
     "web": {
@@ -30,7 +44,7 @@
           "image": "./assets/images/splash-icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
+          "backgroundColor": "#f5f5f5"
         }
       ]
     ],
